deploy: 957771efa35a2c0e31562aa429d86ee03263ef9a

--- a/02_Plot_Output.html
+++ b/02_Plot_Output.html
@@ -401,7 +401,7 @@
 <li><p>Physics</p></li>
 <li><p>Biogeochemistry</p></li>
 </ul>
-<p>You can find these plots throughout the Jupyter notebooks listed along the table of contents on the left side of the page. Below, is a summary of the available plots with links to the specific portion of the notebooks with those respective variables</p>
+<p>You can find these plots throughout the Jupyter notebooks listed along the table of contents on the left side of the page. Below, is a summary of the available plots with links to the specific portion of the notebooks with those respective variables.</p>
 </div>
 <hr class="docutils" />
 <div class="section" id="physics-variables">
